--- a/style.css
+++ b/style.css
@@ -298,10 +298,9 @@ footer {
 
 @media only screen and (max-width:700px) {
 	
-	.view-projects{
-		color:#000;
-		border-color: #000;
-	}	
+	header{
+		background-position-x: 25%;
+	}
 
 	.projects{
 		width:80%;
