--- a/style.css
+++ b/style.css
@@ -55,12 +55,11 @@ table {
 
 header{
   height: 100vh;
-  background-image: url("https://drive.google.com/uc?id=1F-xM98RI0B8CtOG3VI9oS4ZHTLaW21O1");
+  background-image: url("background.jpg");
   background-size: cover;
   background-width: 100%;
   background-max-width: 1920px; 
   background-repeat: no-repeat;
-  opacity:0.8;
 
   display:flex;
   flex-direction: column;
@@ -77,7 +76,7 @@ h1{
 	font-family: Lato, sans-serif;
 	font-size: 3em;
 	text-align: center;
-	color: #000;
+	color: #fff;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
 	font-weight: 600;
@@ -86,7 +85,7 @@ h1{
 
 h2{
 	font-family: Lato, sans-serif;
-	color:#808080;
+	color:grey;
 	font-size: 2em;
 	text-align: center;
 	font-weight: 500;
@@ -114,8 +113,8 @@ h2{
 }
  
 .view-projects:hover{
-	border-color:#808080;
-	color:#808080;
+	border-color:#d5d5d5;
+	color:#d5d5d5;
 }
 
 /* end of header */
@@ -189,8 +188,8 @@ h3{
 }
 
 .button:hover{
-	border-color: #bebebe;
-	color:#bebebe;
+	border-color: #d5d5d5;
+	color:#d5d5d5;
 }
 
 footer {
@@ -201,19 +200,20 @@ footer {
 }
  
 .footer-content {
+ width:90%;
  height:100%;
  display:flex;
  align-items:center;
+ justify-content:center;
  font-family: Lato ,sans-serif;
  font-style: normal;
- font-size:1em;
+ font-size:.8em;
  font-weight: 300;
  letter-spacing: .03em;
 }
  
 .credit {
-	padding-left:2%;
-	width:80%;
+	width:71%;
  	justify-content: flex-start;
 }
  
@@ -228,7 +228,7 @@ footer {
 .social li a {
  color:#f5f5f5;
  padding:0.2em;
- font-size:1.3em;
+ font-size:1.5em;
  font-weight:300;
  text-decoration: none;
 }
@@ -245,7 +245,7 @@ footer {
 	}
 	h2 {
 		font-size: 1em;
-		color:#fff;
+		color:#bebebe;
 	}
 
 	h3{
@@ -254,11 +254,6 @@ footer {
 
 	.view-projects{
 		font-size:.5em;
-	}
-
-	.text-box-content p{
-		font-size: 1em;
-		line-height:1.5em;
 	}
 
 	.button{
@@ -288,11 +283,11 @@ footer {
 	}
 
 	.footer-content{
-		font-size:.8em;
+		font-size:.7em;
 	}
 
 	.social li a {
-		font-size:.9em;
+		font-size:.8em;
 	}
 }
 
@@ -300,6 +295,10 @@ footer {
 	
 	header{
 		background-position-x: 25%;
+	}
+
+	h2{
+		color:#d5d5d5;
 	}
 
 	.projects{
@@ -315,15 +314,15 @@ footer {
 	}
 
 	.button{
-		font-size:.6em;
+		font-size:.7em;
 	}
 
 	.footer-content{
-		font-size:.8em;
+		font-size:.7em;
 	}
 
 	.social li a{
-		font-size:1.1em;
+		font-size:.8em;
 		display:block;
 	}
 }
