--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ footer {
 	}
 
 	.social li a {
-		font-size:.8em;
+		font-size:1em;
 	}
 }
 
@@ -319,5 +319,6 @@ footer {
 
 	.social li a{
 		display:block;
+		font-size:.8em;
 	}
 }
