image from drive

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ table {
 
 header{
   height: 100vh;
-  background-image: url(background.jpg);
+  background-image: url("https://drive.google.com/uc?id=1psrBXodFDqROojPD0pOXUD2bWr8Ijc3o");
   background-size: cover;
   background-width: 100%;
   background-max-width: 1920px; 
