--- a/style.css
+++ b/style.css
@@ -162,6 +162,19 @@ h3{
 	margin-top:1%;
 }
 
+.text-box-content{
+		position: relative;
+		top: 50%;
+		transform: translateY(-50%);
+	}
+	
+	p.date{
+		color:#808080;
+		width:100%;
+		margin:0;
+		padding:0;
+	}	
+
 .text-box-content p{
 	font-family:Lato, sans-serif;
 	width:90%;
