--- a/style.css
+++ b/style.css
@@ -1,339 +1,339 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+:root {
+    --main-bg-color: #02111B; 
+    --second-bg-color: #FCFCFC;
+    --grey: #EBF2FA;
+    --accent-1: #427AA1;
 }
 
-/* End of CSS Reset */
-
-* {
-  box-sizing: border-box; 
+*{
+    margin:0;
+    padding:0;
 }
-
-header{
-  height: 100vh;
-  background-image: url(background.jpg);
-  background-size: cover;
-  background-width: 100%;
-  background-max-width: 1920px; 
-  background-repeat: no-repeat;
-
-  display:flex;
-  flex-direction: column;
-  justify-content:center;
-}
-
-.flex-row{
-	display:flex;
-	justify-content: center;
-	text-align:center;
-}
-
-h1{
-	font-family: Lato, sans-serif;
-	font-size: 3em;
-	text-align: center;
-	color: #fff;
-	text-transform: uppercase;
-	letter-spacing: 0.1em;
-	font-weight: 600;
-	line-height: 1.0em;	
-}
-
-h2{
-	font-family: Lato, sans-serif;
-	color:#fff;
-	font-size: 2em;
-	text-align: center;
-	font-weight: 500;
-	text-transform: capitalize;
-	letter-spacing: 0.09em;
-}
-
-.view-projects{
-	font-family:Tajawal, sans-serif;
-	font-weight: 500;
-	font-size: 1em;
-	text-transform: uppercase;
-	letter-spacing: 0.2em;
-	text-decoration: none;
-	color: #fff;
-	border: 2px solid #fff;
-	text-align: center;
-	width:20%;
-	margin: 0 auto;
-	margin-top:30%;
-	margin-bottom:1%;
-	padding: 2% 0;
-
-	transition: color 0.5s ease;
-}
- 
-.view-projects:hover{
-	border-color:#d5d5d5;
-	color:#d5d5d5;
-}
-
-/* end of header */
 
 body{
-	background-color: #f5f5f5;
+    font-family: 'Roboto Condensed', sans-serif;
+    background: var(--grey);
 }
+
+.bg{
+    background-color: var(--main-bg-color);
+    background: linear-gradient(to bottom, var(--main-bg-color) 0%, var(--main-bg-color) 85%, var(--grey) 85%,var(--grey) 100%); /* W3C */
+    margin:0;
+    padding:0;
+}
+
+.fill{
+    min-height: 80%;
+    height: 80%;
+    width:80%;
+    margin: 0 auto;
+    margin-top:5%;
+    background-color: var(--second-bg-color);
+    border-radius: 15px;
+
+    box-shadow: 1px 1px 5px #888888;
+}
+
+img{
+    width:100%;
+    height:auto;
+    border-radius: 15px;
+}
+
+.face-cont{
+    margin-top:30%;
+}
+
+.about-cont{
+    margin-top:25%;
+}
+
+.space{
+    margin-top:50px;
+}
+
+.bottom-margin{
+    margin-bottom: 0;
+}
+
+.accent{
+    color:var(--accent-1);
+}
+
+.sidebar{
+    background: var(--second-bg-color);
+    width:50px;
+    position:fixed;
+    right:0;
+    top:25%;
+    border-top-left-radius:15px;
+    border-bottom-left-radius:15px;
+
+    box-shadow: 1px 1px 5px #888888;
+}
+
+.sidebar li{
+    list-style-type: none;
+    margin-bottom:10px;
+}
+
+.sidebar a{
+    text-decoration:none;
+    color: var(--accent-1);
+}
+
+.sidebar a:hover{
+    color: var(--main-bg-color);
+    transition: color 0.5s ease;
+}
+
+.sidebar ul{
+    padding: 0;
+    margin-top: 10px;
+    margin-left: 12px;
+}
+
+#projLink, .view-project{
+    width:20%;
+    margin: 0 auto;
+    
+    font-size:0.8em;
+    color: var(--accent-1);
+    text-transform: uppercase;
+	text-decoration: none;
+    border: 2px solid var(--accent-1);
+    border-radius:10px;
+	text-align: center;
+	width:15%;
+	margin: 0 auto;
+}
+
+#projLink:hover{
+    color: var(--main-bg-color);
+    border-color: var(--main-bg-color);
+    transition: color 0.5s ease;
+}
+
+/*projects styles*/
 
 .projects{
-	background-color: #fff;
-	width:90%;
-	height:40%;
-	margin:2% auto;
-	float:center;
-	box-shadow: 2px 3px 2px #cccccc;
+    height:100vh;
 }
 
-.image-area{
-	float:left;
-	overflow: hidden;
-	width:40%;
+.project{
+    width:50%;
+    margin: 0 auto;
+    margin-top:5%;
+    text-align:center;
 }
 
-img {
-    width: 100%;
-    height: 100%;
+.project a{
+    text-decoration: none;
 }
 
-.text-box{
-	overflow:auto;
-	float: right;
-	text-align: center;
-	width: 50%;
-	height:100%;
-}
-
-h3{
-	font-family: Lato, sans-serif;
-	color: #000;
-	font-size: 1.5em;
-	text-align: center;
-	font-weight: 500;
-	text-transform: capitalize;
-	letter-spacing: 0.09em;
-	margin-top:1%;
-}
-
-.text-box-content{
-		position: relative;
-		top: 50%;
-		transform: translateY(-50%);
-	}
-	
-	p.date{
-		color:#808080;
-		width:100%;
-		margin:0;
-		padding:0;
-	}	
-
-.text-box-content p{
-	font-family:Lato, sans-serif;
-	width:90%;
-	margin:5% auto;
-	line-height:1.5em;
-	font-size:1em;
-}
-
-.button{
-	font-family:Tajawal, sans-serif;
-	font-weight: 500;
-	font-size:1em;
-	text-transform: uppercase;
+.project .row a{
+    width:20%;
+    margin:0 auto;
+    text-align:center;
+    font-size:0.8em;
+    color: var(--accent-1);
+    text-transform: uppercase;
 	text-decoration: none;
-	border: 2px solid #808080;
-	letter-spacing: 0.2em;
-	color: #808080;
-	text-align: center;
-	display: block;
-	width:50%;
-	margin: 0 auto;
-	padding: 2% 0;
-
-	transition: color 0.5s ease;
+    border: 2px solid var(--accent-1);
+    border-radius:10px;
 }
 
-.button:hover{
-	border-color: #d5d5d5;
-	color:#d5d5d5;
+.project .row a:hover, .green .project .row a:hover, .bluegreen .project .row a:hover, .red .project .row a:hover, 
+.blue .project .row a:hover, .pink .project .row a:hover{
+    color: var(--main-bg-color);
+    border-color: var(--main-bg-color);
+    transition: color 0.5s ease;
 }
 
-footer {
- background-color: #000;
- color: #f5f5f5;
- clear:both;
- height:10%;
-}
- 
-.footer-content {
- width:90%;
- margin:0 auto;
- height:100%;
- display:flex;
- align-items:center;
- justify-content:center;
- font-family: Lato ,sans-serif;
- font-style: normal;
- font-size:.8em;
- font-weight: 300;
- letter-spacing: .03em;
-}
- 
-.credit {
-	display: flex;
-	flex-basis:50%;
-}
- 
-.social {
-	display: flex;
-	flex-basis:50%;
-	justify-content: flex-end;
-}
- 
-.social li {
- display:inline;
-}
- 
-.social li a {
- color:#f5f5f5;
- padding:0.2em;
- font-size:1.5em;
- font-weight:300;
- text-decoration: none;
-}
- 
-.social li a:hover {
- color:#808080;
-
- transition: color 0.5s ease;
-}
- 
-@media only screen and (max-width:1200px) {
-	h1 {
-		font-size: 2em;
-	}
-	h2 {
-		font-size: 1em;
-	}
-
-	h3{
-		font-size:1.25em;
-	}
-
-	.view-projects{
-		font-size:.5em;
-	}
-
-	.button{
-		font-size:.8em;
-	}
-
-	.projects{
-		height:80%;
-		width:50%;
-	}
-
-	.image-area{
-		width:100%;
-		height:50%;
-		float:center;
-		margin:0;
-		padding:0;
-	}
-
-	.text-box{
-		height:50%;
-		margin: 0;
-		padding:0;
-		width:100%;
-		float:center;
-		text-align:center;
-	}
-
-	.footer-content{
-		font-size:.7em;
-	}
-
-	.social li{
-		font-size:1em;
-	}
+.project h2{
+    margin-top: 20px;
+    margin-bottom:0;
 }
 
-@media only screen and (max-width:700px) {
-	
-	header{
-		background-position-x: 25%;
-	}
+.project img{
+    width: 100%;
+    height: 50%;
+}
 
-	.projects{
-		width:75%;
-	}
+.serif{
+    font-family: 'Playfair Display', serif;
+}
 
-	img{
-		height:80%;
-	}
+.date{
+    margin-top:0;
+}
 
-	.text-box-content p{
-		font-size:.8em;
-	}
+footer{
+    background-color: var(--main-bg-color);
+    color: var(--second-bg-color);
+    font-weight: 200;
+    font-size: 0.8em;
+}
 
-	.button{
-		font-size:.7em;
-	}
+#projects{
+    margin-top:5px;
+}
 
-	.footer-content{
-		font-size:.6em;
-	}
+.view-button{
+    text-align:center;
+}
 
-	.social li{
-		font-size:.7em;
-	}
+.green{
+    background-color:#0f5948;
+    color:var(--second-bg-color);
+}
+
+.green .project .row a, .red .project .row a, 
+.blue .project .row a, .pink .project .row a{
+    color: var(--grey);
+    border: 2px solid var(--grey);
+    border-radius:10px;
+}
+
+.bluegreen{
+    background-color:#b4ebca;
+    color: var(--main-bg-color);
+}
+
+.pink{
+    background-color:#BB66A8;
+}
+
+.red{
+    background-color: #69232A;
+    color: var(--grey);
+}
+
+.blue{
+    background-color:#18C6E7;
+    color: var(--main-bg-color);
+}
+
+
+@media only screen and (max-width: 1440px) {
+    .face-cont{
+        margin-top:50%;
+    }
+    
+    .about-cont{
+        margin-top:30%;
+    }
+}
+
+
+@media only screen and (max-width: 1100px) {
+    .face-cont{
+        margin-top:90%;
+    }
+    
+    .about-cont{
+        margin-top:36%;
+    }
+
+    .about-cont h2{
+        font-size: 1.5em; 
+    }
+
+    .about-cont p{
+        font-size: 0.9em;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .face-cont{
+        margin-top:100%;
+    }
+
+    .about-cont{
+        margin-top:42%;
+    }
+
+    .project p{
+        font-size: 0.9em;
+    }
+
+    .about-cont h2{
+        font-size: 1.1em; 
+    }
+
+    .about-cont h2{
+        font-size: 1.2em; 
+    }
+
+    .about-cont p{
+        font-size: 0.8em;
+    }
+
+    .project img{
+        height: 40%;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .face-cont{
+        margin-top:135%;
+    }
+
+    .project img{
+        height: 30%;
+    }
+
+    .about-cont h2{
+        font-size: 1.0em; 
+    }
+
+    #projLink{
+        width:30%;
+    }
+
+    .sidebar{
+        width:20px;
+    }
+
+    .fab, .fas{ 
+        font-size: 15px;
+    }
+
+    .sidebar ul{
+        margin-left:3px;
+    }
+
+    #projLink, .project .row a{ 
+        font-size:0.3em;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .face-cont{
+        margin-top:137%;
+    }
+
+    .project img{
+        height: 25%;
+    }
+
+    .project h2{
+        font-size: 1.3em;
+    }
+
+    .project p{
+        font-size: 0.8em;
+    }
+
+    .about-cont h2{
+        font-size: 0.9em; 
+    }
+
+    .about-cont p{
+        font-size: 0.7em;
+    }
+
+    #projLink, .project .row a{ 
+        font-size:0.2em;
+    }
 }
