added new project: database web interface

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ img{
 }
 
 .project .row a:hover, .green .project .row a:hover, .bluegreen .project .row a:hover, .red .project .row a:hover, 
-.blue .project .row a:hover, .pink .project .row a:hover, .darkblue .project .row a:hover{
+.blue .project .row a:hover, .pink .project .row a:hover, .darkblue .project .row a:hover, .darkgrey .project .row a:hover{
     color: var(--main-bg-color);
     border-color: var(--main-bg-color);
     transition: color 0.5s ease;
@@ -191,13 +191,18 @@ footer{
     color:var(--second-bg-color);
 }
 
+.darkgrey{
+    background-color:#444;
+    color:var(--second-bg-color);
+}
+
 .green{
     background-color:#0f5948;
     color:var(--second-bg-color);
 }
 
 .green .project .row a, .red .project .row a, 
-.blue .project .row a, .pink .project .row a, .darkblue .project .row a{
+.blue .project .row a, .pink .project .row a, .darkblue .project .row a, .darkgrey .project .row a{
     color: var(--grey);
     border: 2px solid var(--grey);
     border-radius:10px;
