--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root {
     --main-bg-color: #02111B; 
     --second-bg-color: #FCFCFC;
-    --grey: #EBF2FA;
-    --accent-1: #427AA1;
+    --purple1: #B2ABF2;
+    --purple2: #666FA3;
+    --accent-1: #666FA3;
 }
 
 *{
@@ -11,13 +12,13 @@
 }
 
 body{
-    font-family: 'Roboto Condensed', sans-serif;
+    
+    font-family: 'Bebas Neue', cursive;
     background: var(--grey);
 }
 
 .bg{
     background-color: var(--main-bg-color);
-    background: linear-gradient(to bottom, var(--main-bg-color) 0%, var(--main-bg-color) 85%, var(--grey) 85%,var(--grey) 100%); /* W3C */
     margin:0;
     padding:0;
 }
@@ -146,13 +147,6 @@ img{
     border-radius:10px;
 }
 
-.project .row a:hover, .green .project .row a:hover, .bluegreen .project .row a:hover, .red .project .row a:hover,
-.blue .project .row a:hover, .pink .project .row a:hover, .darkblue .project .row a:hover, .darkgrey .project .row a:hover{
-    color: var(--main-bg-color);
-    border-color: var(--main-bg-color);
-    transition: color 0.5s ease;
-}
-
 .project h2{
     margin-top: 20px;
     margin-bottom:0;
@@ -164,7 +158,7 @@ img{
 }
 
 .serif{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .date{
@@ -186,49 +180,37 @@ footer{
     text-align:center;
 }
 
-.orange{
-    background-color:rgb(235,73,37);
-    color:var(--second-bg-color);
-}
-
-.darkblue{
-    background-color:#241f58;
-    color:var(--second-bg-color);
-}
-
-.darkgrey{
-    background-color:#444;
-    color:var(--second-bg-color);
-}
-
-.green{
-    background-color:#0f5948;
-    color:var(--second-bg-color);
-}
-
-.green .project .row a, .red .project .row a,
-.blue .project .row a, .pink .project .row a, .darkblue .project .row a, .darkgrey .project .row a{
-    color: var(--grey);
-    border: 2px solid var(--grey);
-    border-radius:10px;
-}
-
-.bluegreen{
-    background-color:#b4ebca;
+.one{
+    background-color:#FFFCF2;
     color: var(--main-bg-color);
 }
 
-.pink{
-    background-color:#BB66A8;
+.one .project .row a{
+    color: var(--purple1);
+    border: 2px solid var(--purple1);
+    border-radius:10px;
 }
 
-.red{
-    background-color: #69232A;
-    color: var(--grey);
+.two .project .row a{
+    color: var(--purple1);
+    border: 2px solid var(--purple1);
+    border-radius:10px;
 }
 
-.blue{
-    background-color:#18C6E7;
+.one .project .row a:hover{
+    color: var(--purple2);
+    border: 2px solid var(--purple2);
+    border-radius:10px;
+}
+
+.two .project .row a:hover{
+    color: var(--purple2);
+    border: 2px solid var(--purple2);
+    border-radius:10px;
+}
+
+.two{
+    background-color: #FDF8EC;
     color: var(--main-bg-color);
 }
 
