--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ footer{
 }
 
 .one{
-    background-color:#FFFCF2;
+    background-color:#ffffff;
     color: var(--main-bg-color);
 }
 
@@ -210,7 +210,7 @@ footer{
 }
 
 .two{
-    background-color: #FDF8EC;
+    background-color: #e7e7e7;
     color: var(--main-bg-color);
 }
 
