--- a/views/style.css
+++ b/views/style.css
@@ -224,15 +224,15 @@ footer{
 }
 
 
-/* @media only screen and (max-width: 1440px) {
-    .face-cont{
-        margin-top:50%;
+@media only screen and (max-width: 1440px) {
+
+    #about{
+        height:70%;
+        width:80%;
+        margin-top: -55%;
+        margin-left: 10%;
     }
-    
-    .about-cont{
-        margin-top:30%;
-    }
-} */
+}
 
 
 @media only screen and (max-width: 1100px) {
