--- a/views/style.css
+++ b/views/style.css
@@ -231,6 +231,7 @@ footer{
         width:80%;
         margin-top: -55%;
         margin-left: 10%;
+        font-size: 0.9em;
     }
 }
 
@@ -250,6 +251,7 @@ footer{
         width:80%;
         margin-top: -73%;
         margin-left: 10%;
+        font-size: 0.8em;
     }
 }
 
