--- a/views/index.ejs
+++ b/views/index.ejs
@@ -139,10 +139,10 @@
 	
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?export=view&id=1tjnTFJoL70ciFpZogTwcY9Fs9Om9-1oe" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
-			<h2>EnigmaLabelDao</h2>
+			<img src="https://drive.google.com/uc?export=view&id=175P-QLU4Y6-HuvpkNI_VdIAKnt45BqdQ" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
+			<h2>SPOTx</h2>
 			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
-			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> An Ethereum(Rinkeby) Dapp to join a Record Label DAO(Decentralized Autonomous Organization). Built with React, and 3rdweb. Based on the Build your own DAO with just Javascript Course by <a href="buildspace.so">Buildspace</a>. Blockchain Components: ERC-1155 NFT, custom ERC-20 token($ENIGMA), Governance Contract.</p>
+			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> An Solana Dapp that allows busineses to create NFT rewards for their loyalty customers. Created as the second use case for ShrimpGames(NFT AR Game) for MiamiHackWeek2022.</p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://recordlabel-dao.genesisbarrios1.repl.co/" target="_blank" class="view-button"> View Project </a>
 			</div>
@@ -150,6 +150,18 @@
 	</section>
 
 	<section class="projects d-flex two">
+		<div class="project justify-content-center align-self-center">
+			<img src="https://drive.google.com/uc?export=view&id=1tjnTFJoL70ciFpZogTwcY9Fs9Om9-1oe" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
+			<h2>EnigmaLabelDao</h2>
+			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
+			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> An Ethereum(Rinkeby) Dapp to join a Record Label DAO(Decentralized Autonomous Organization). Built with React, and 3rdweb. Based on the Build your own DAO with just Javascript Course by <a href="buildspace.so">Buildspace</a>. Blockchain Components: ERC-1155 NFT, custom ERC-20 token($ENIGMA), Governance Contract.</p>
+			<div class="row" style="margin-bottom:5px;">
+				<a href="https://spot-rewards.genesisbarrios1.repl.co/" target="_blank" class="view-button"> View Project </a>
+			</div>
+		</div>
+	</section>
+
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			
 			<img src="https://drive.google.com/uc?export=view&id=1RjL792msNHOXeXJWl5mbnGj8swOcEzW_" alt="LyricPortal - Ethereum Dapp for sharing lyrics"/>
@@ -162,7 +174,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1OO0ay-fy6IThnEkeMCp7fQ17NniygSlG" alt="MetaShop - 3D VR Web Shop"/>
 			<h2>MetaShop</h2>
@@ -177,7 +189,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ffpL3s2ejJaFSjNRW23g0moWkCbpcWJT" alt="Wavy Pads Web Synth"/>
 			<h2>Wavy Pads</h2>
@@ -189,7 +201,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1KzxObx4MwrtQ_iXZn2BG1tYrJnFCH2Hm" alt="Group Event Manager Mobile App"/>
 			<h2>Group Event Manager</h2>
@@ -201,7 +213,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1ps5VAAgkwMktDpkeaaOCKNdbz2BeLQPQ" alt="Jumpy Blocks"/>
 			<h2>Jumpy Blocks</h2>
@@ -213,7 +225,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1kHyPPxqmGHWePdPgrhfEkBP2hxI0s90b"/>
 			<h2>YouTube Multiple Comment App</h2>
@@ -225,31 +237,31 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1AQCVEyUjSCshzLvIyqwEMuYjEUTwa8MF"/>
 			<h2>VirtualRollCall</h2>
 			<p class="serif"> April, 2020 </p>
-			<p class="serif">For my senior project my teammate and I recreated the documentation and attendance application for the Pinecrest police department. Built with Angular, and Node.js.</p>
+			<p class="serif">For my Senior Project my teammate and I recreated the documentation and attendance application for the Pinecrest police department. Built with Angular, and Node.js.</p>
 			<div class="row">
 				<a href="https://github.com/genesisbarrios/VirtualRollCallSpring2020" target="_blank" class="view-button"> View Project</a>
 			</div>
 		</div>
 	</section>
 
-	<section class="projects d-flex one">
+	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1QwBhqXjcjJEMfJhX7J4b_cKfjBgzi_o1"/>
 			<h2>Geek Text</h2>
 			<p class="serif"> December, 2019 </p>
-			<p class="serif">The project for my Software Engineering class. We created a web application that allows users to create a profile, browse for books and authors and add them to their cart, and leave reviews on books. Built with Javascript, Express.js, Node.js, and MongoDB.</p>
+			<p class="serif">The final project for my Software Engineering class. We created a web application that allows users to create a profile, browse for books and authors and add them to their cart, and leave reviews on books. Built with Javascript, Express.js, Node.js, and MongoDB.</p>
 			<div class="row">
 				<a href="https://github.com/BarbosaO/CEN4010-Team-Project" target="_blank" class="view-button"> View Project</a>
 			</div>
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1Uirx5_Jkx9MH5sIOVllo7TiwKpuh0AXB"/>
 			<h2>Backroom Sessions iOS Application</h2>
@@ -257,44 +269,6 @@
 			<p class="serif">As the final project for my Mobile Application Development class, we created an iOS application for a local business. Built with Swift in XCode.</p>
 			<div class="row">
 				<a href="https://github.com/Isumy/BackroomSessions_Team_B" target="_blank" class="view-button"> View Project</a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex one">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=10imPKHtmjV_teJIHW1F0emoVAVtyzdqa"/>
-			<h2>Database Web Interface</h2>
-			<p class="serif"> April, 2019 </p>
-			<p class="serif">An assignment for my Database Management class. A Node.js application that allows the user to manipulate several tables in a mysql database of Books.</p>
-			<div class="row">
-				<a href="mailto:genesisbarriosdev@gmail.com" target="_blank" class="view-button">Request Code</a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex two">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1D-FC7RuBkkuSbg-jYBQvb_ZHJv8MSN0b" alt="BMP Image Processor"/>
-			<h2>BMP Image Processor</h2>
-			<p class="serif"> March, 2019 </p>
-			<p class="serif">An assignment for my Programming 3 class. It takes a bmp image and given the options(from the command line): it will scale the image, rotate the image, or flip the image horizonally or vertically. Built in C.</p>
-			<div class="row">
-				<a href="mailto:genesisbarriosdev@gmail.com" target="_blank" class="view-button">Request Code</a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex one">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1MBHBDIFiWEPUa0iqhtB5xh1dKngee6W0" alt="Catering Form Project"/>
-			<h2>Catering Form Project</h2>
-			<p class="serif"> August, 2018 </p>
-			<p class="serif"> An application that allows users to fill out a form with their contact information
-			and what items they want from a menu. Upon submission, this data is stored into our Microsoft SQL database, 
-			and an e-mail with the order information is sent. Built with C#.</p>
-			<div class="row">
-				<a href="mailto:genesisbarriosdev@gmail.com" class="view-button">Request Code</a>
 			</div>
 		</div>
 	</section>
@@ -325,44 +299,6 @@
 
 	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1_cBNAZaHMIfpt_0gwvaUbuKvqI-uT13u" alt="Collaboration Website"/>
-			<h2>Collab, Bro?</h2>
-			<p class="serif"> April, 2018 </p>
-			<p class="serif"> I built the front end of a multi-page responsive website for artists 
-			that want to collaborate with each other. I used HTML, CSS, and Bootstrap. </p>
-			<div class="row">
-				<a href="https://github.com/genesisbarrios/collabBro" target="_blank" class="view-button"> View Project</a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex one">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1Zrb2I2BzSoMwLkSV2khyb86Mx7a7yQQf" alt="Image Gallery"/>
-			<h2>3:2</h2>
-			<p class="serif"> March, 2018 </p>
-			<p class="serif"> I built a website gallery that shows images that have a 3 by 2 aspect ratio. There are different 
-			pages for different themes. I used HTML, and CSS. In the future I plan on allowing visitors to add their photos and create new theme pages. </p>
-			<div class="row">
-				<a href="https://github.com/genesisbarrios/3by2" target="_blank" class="view-button"> View Project </a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex two">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1ZqGWrnyAR6041V_obQMHPpQja-V3aMJO" alt="Artist Website"/>
-			<h2>Artist Website</h2>
-			<p class="serif"> March, 2018 </p>
-			<p class="serif">I built an artist website for myself. I used HTML, and CSS.</p>
-			<div class="row">
-				<a href="https://github.com/genesisbarrios/artistwebsite" target="_blank" class="view-button"> View Project </a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex one">
-		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1FMw6bO6LfzOKDr4sn9nRnJM42RGPkMCQ" alt="Bulk Texting Application"/>
 			<h2>Automated Bulk Texting</h2>
 			<p class="serif"> February, 2018 </p>
@@ -373,17 +309,6 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://cdn.pixabay.com/photo/2014/03/07/09/43/robot-281880__340.jpg" alt="Two Player Web Hangman"/>
-			<h2>Two Player Hangman</h2>
-			<p class="serif date"> March, 2017 </p>
-			<p class="serif"> As my TADHack Mini Orlando 2017 project submission I created a two-player web hangman game with an integrated audio call using the Temasys WebRTC APIs and Javascript. </p>
-			<div class="row">
-				<a href="https://github.com/bennypaulino/peer-to-peer-hangman" target="_blank" class="view-button">View Project</a>
-			</div>
-		</div>
-	</section>
 	<footer class="page-footer font-small">
 		<div class="footer-copyright text-center py-3">© Copyright 2018. Designed and Developed by Genesis Barrios</div>
 	</footer>
