added spotx for miami hack week

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,7 +142,7 @@
 			<img src="https://drive.google.com/uc?export=view&id=175P-QLU4Y6-HuvpkNI_VdIAKnt45BqdQ" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
 			<h2>SPOTx</h2>
 			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
-			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> A Solana Dapp that allows busineses to create NFT rewards for their loyalty customers. Created as the second use case for ShrimpGames(NFT AR Game) for MiamiHackWeek2022.</p>
+			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> A Solana Dapp that allows busineses to create NFT rewards for their loyalty customers. Created as the second use case for <a href="shrimpgame.io">ShrimpGame</a>(NFT AR Game) for MiamiHackWeek2022.</p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://recordlabel-dao.genesisbarrios1.repl.co/" target="_blank" class="view-button"> View Project </a>
 			</div>
