--- a/views/index.ejs
+++ b/views/index.ejs
@@ -144,7 +144,7 @@
 			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
 			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> A Solana Dapp that allows busineses to create NFT rewards for their loyalty customers. Created as the second use case for <a href="shrimpgame.io">ShrimpGame</a>(NFT AR Game) for MiamiHackWeek2022.</p>
 			<div class="row" style="margin-bottom:5px;">
-				<a href="https://fie4i.csb.app/" target="_blank" class="view-button"> View Project </a>
+				<a href="https://61f8adccb0f941270a1502cd--epic-panini-5f7186.netlify.app/Rewards" target="_blank" class="view-button"> View Project </a>
 			</div>
 		</div>
 	</section>
