--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,9 +142,12 @@
 			<img src="https://drive.google.com/uc?export=view&id=175P-QLU4Y6-HuvpkNI_VdIAKnt45BqdQ" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
 			<h2>SPOTx</h2>
 			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
-			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> A Solana Dapp that allows busineses to create NFT rewards for their loyalty customers. Created as the second use case for <a href="shrimpgame.io">ShrimpGame</a>(NFT AR Game) for MiamiHackWeek2022.</p>
+			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> A Polygon Dapp that allows busineses to create NFT rewards for their loyalty customers. Created as the second use case for <a href="shrimpgame.io">ShrimpGame</a>(NFT AR Game) for MiamiHackWeek2022.</p>
 			<div class="row" style="margin-bottom:5px;">
-				<a href="https://61f8adccb0f941270a1502cd--epic-panini-5f7186.netlify.app/Rewards" target="_blank" class="view-button"> View Project </a>
+				<a href="https://61ff798d32ca040007e26201--epic-panini-5f7186.netlify.app/" target="_blank" class="view-button"> View Project </a>
+			</div>
+			<div class="row">
+				<a href="https://github.com/genesisbarrios/SPOTx" target="_blank" class="view-button"> View Code </a>
 			</div>
 		</div>
 	</section>
@@ -156,7 +159,7 @@
 			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
 			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> An Ethereum(Rinkeby) Dapp to join a Record Label DAO(Decentralized Autonomous Organization). Built with React, and 3rdweb. Based on the Build your own DAO with just Javascript Course by <a href="buildspace.so">Buildspace</a>. Blockchain Components: ERC-1155 NFT, custom ERC-20 token($ENIGMA), Governance Contract.</p>
 			<div class="row" style="margin-bottom:5px;">
-				<a href="https://spot-rewards.genesisbarrios1.repl.co/" target="_blank" class="view-button"> View Project </a>
+				<a href="https://RecordLabel-DAO.genesisbarrios1.repl.co" target="_blank" class="view-button"> View Project </a>
 			</div>
 		</div>
 	</section>
@@ -169,7 +172,7 @@
 			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
 			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> An Ethereum(Rinkeby) Dapp for sharing lyrics based on the Solidity + Ethereum Smart Contracts Course by <a href="buildspace.so">Buildspace</a>. Built with React.js, Solidity, and Replit for hosting on the Rinkeby testnet. If my testing goes well I will deploy to mainnet for everyone to use and obtain real ETH.</p>
 			<div class="row" style="margin-bottom:5px;">
-				<a href="https://waveportal-starter-project.genesisbarrios1.repl.co/" target="_blank" class="view-button"> View Project </a>
+				<a href="https://LyricPortal.genesisbarrios1.repl.co" target="_blank" class="view-button"> View Project </a>
 			</div>
 		</div>
 	</section>
