--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,7 +142,7 @@
 			<img src="https://drive.google.com/uc?export=view&id=175P-QLU4Y6-HuvpkNI_VdIAKnt45BqdQ" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
 			<h2>SPOTx</h2>
 			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
-			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> A Polygon Dapp that allows busineses to create NFT rewards for their loyalty customers. Created as the second use case for <a href="shrimpgame.io">ShrimpGame</a>(NFT AR Game) for MiamiHackWeek2022.</p>
+			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> A Solana(now Polygon) Dapp that allows busineses to create NFT rewards for their loyalty customers. Created as the second use case for <a href="shrimpgame.io">ShrimpGame</a>(NFT AR Game) for MiamiHackWeek2022.</p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://61ff798d32ca040007e26201--epic-panini-5f7186.netlify.app/" target="_blank" class="view-button"> View Project </a>
 			</div>
@@ -182,7 +182,7 @@
 			<img src="https://drive.google.com/uc?id=1OO0ay-fy6IThnEkeMCp7fQ17NniygSlG" alt="MetaShop - 3D VR Web Shop"/>
 			<h2>MetaShop</h2>
 			<p class="serif" style="margin-bottom:2px;"> December 2021 </p>
-			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> A 3D interactive web store that allows users to interact with items, chat with other users, and request help from the Avaya Webchat agent. This project won 3rd place in the TadHack-Mini Orlando Hackathon at Avaya ENGAGE 2021. Future plans include perfecting the physics and GUI, updating character models in all client views so users can be in the same store together, and either setting it up as an ecommerce platform or setting it up with Metaplex to sell NFTs on the Solana blockchain.</p>
+			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> A 3D interactive web store that allows users to interact with items, chat with other users, and request help from the Avaya Webchat agent. This project won 3rd place in the TadHack-Mini Orlando Hackathon at Avaya ENGAGE 2021. Future plans include perfecting the physics and GUI, updating character models in all client views so users can be in the same store together, and either setting it up as an ecommerce platform or setting it up as an NFT store on Etherum.</p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://github.com/genesisbarrios/metashop" target="_blank" class="view-button"> View Project </a>
 			</div>
