--- a/views/index.ejs
+++ b/views/index.ejs
@@ -139,6 +139,18 @@
 	
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
+			<img src="https://drive.google.com/uc?export=view&id=https://drive.google.com/file/d/1ncdC6AD3K69cJ95UwmEllxkfWqjdbA2r/view?usp=sharing" alt="Enigma Software Consulting"/>
+			<h2>Enigma Software Consulting</h2>
+			<p class="serif" style="margin-bottom:2px;"> February 2022 </p>
+			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> I launched my software consulting business along with a website built with React and Three.js, with a blog that is supported by a Firebase database.</p>
+			<div class="row" style="margin-bottom:5px;">
+				<a href="https://www.enigmasoftwareconsulting.com" target="_blank" class="view-button"> View Website </a>
+			</div>
+		</div>
+	</section>
+
+	<section class="projects d-flex one">
+		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?export=view&id=175P-QLU4Y6-HuvpkNI_VdIAKnt45BqdQ" alt="EnigmaLabelDAO - Ethereum Dapp to join a Record Label DAO."/>
 			<h2>SPOTx</h2>
 			<p class="serif" style="margin-bottom:2px;"> January 2022 </p>
