--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,7 +142,7 @@
 			<img src="https://drive.google.com/uc?export=view&id=https://drive.google.com/file/d/1ncdC6AD3K69cJ95UwmEllxkfWqjdbA2r/view?usp=sharing" alt="Enigma Software Consulting"/>
 			<h2>Enigma Software Consulting</h2>
 			<p class="serif" style="margin-bottom:2px;"> February 2022 </p>
-			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> I launched my software consulting business along with a website built with React and Three.js, with a blog that is supported by a Firebase database.</p>
+			<p class="serif" style="font-size:0.8em; margin-bottom:2px;"> I launched my software consulting business along with a website built with React and Three.js, and with a blog that is supported by a Firebase database.</p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://www.enigmasoftwareconsulting.com" target="_blank" class="view-button"> View Website </a>
 			</div>
