--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,8 +84,8 @@
 			tick();
 
 			var i =0;
-			var aboutText = "genesisbarrios:~$ cd genesisbarrios/About\r\ngenesisbarrios:~$ cat about.txt \r\n";
-			var aboutText2 = "\r\nHello! My name is Genesis Barrios.\r\nI'm a Software Engineer based in Miami, Florida. 🌴 \r\nI got my Bachelor's of Science in Computer Science in Spring of 2020 from Florida International University.\r\nSome of my topics of study include: C Programming, Java Programming, Data Structures, Discrete Structures,\r\nComputer Architecture, Database Management, Net Centric Computing, Software Engineering,\r\nMobile Application Development, and Programming Languages. \r\nI am currently working as an IT Resident at Assurant where I build and support applications in the Azure cloud.\r\nI have experience with various technologies including Javascript, JQuery, Bootstrap, HTML, CSS, Angular, React,\r\n Node.js, MongoDB, SQL, MySQL, MicrosoftSQL, Java, Tomcat, C#, .NET, Azure Cloud,\r\nSwift, Web GL(Babylon.js, Three.js), Web3.js, Solidity, and Python.";
+			var aboutText = " cd genesisbarrios/About\r\ngenesisbarrios:~$ cat about.txt \r\n";
+			var aboutText2 = "\r\nHello! My name is Genesis Barrios.\r\nI'm a Software Engineer based in Miami, Florida. 🌴 \r\nI got my Bachelor's of Science in Computer Science in Spring of 2020 from Florida International University.\r\nSome of my topics of study include: C Programming, Java Programming, Data Structures, Discrete Structures,\r\nComputer Architecture, Database Management, Net Centric Computing, Software Engineering,\r\nMobile Application Development, and Programming Languages. \r\nI am currently working as an Associate Software Engineer at Assurant where I build and support applications in the Azure cloud.\r\nI have experience with various technologies including Javascript, JQuery, Bootstrap, HTML, CSS, Angular, React,\r\n Node.js, MongoDB, SQL, MySQL, MicrosoftSQL, Java, Tomcat, C#, .NET, Azure Cloud,\r\nSwift, Web GL(Babylon.js, Three.js), Web3.js, Solidity, and Python.";
 			var speed = 50;
 
 			function typeWriter(){
@@ -115,7 +115,7 @@
 						</div>
 						<div class="col-10">
 							<div class="about-cont" >
-								<p class="bottom-margin" id="aboutText"></p>
+								<p class="bottom-margin" id="aboutText">genesisbarrios:~$</p>
 								<p class="bottom-margin" id="aboutText2"></p>
 							</div>
 						</div>
