add alphabet sapces win

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,7 +142,7 @@
 			<img src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/002/018/361/datas/medium.png" alt="Alphabet Spaces"/>
 			<h2>Alphabet Spaces</h2>
 			<p class="serif" style="margin-bottom:2px;"> Jun 2022 </p>
-			<p class="serif" style="font-size:0.8em; margin-bottom:2px;">For <a href="https://pridehacksii.devpost.com/">MLH Pride Hacks 2</a>, I built a decentralized social media platform for LGBTQ+ people to find Safe Spaces and meet other people in the community. Users and followers functionality is handled by DeSo, Spaces are handled in firebase, and the front-end is React.</p>
+			<p class="serif" style="font-size:0.8em; margin-bottom:2px;">For <a href="https://pridehacksii.devpost.com/">MLH Pride Hacks 2</a>, I built a decentralized social media platform for LGBTQ+ people to find Safe Spaces and meet other people in the community. Users and followers functionality is handled by DeSo, Spaces are handled in firebase, and the front-end is React. Won the Prize for Best Use of <a href="https://www.deso.org/">DeSo.</a></p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://www.alphabetspaces.co" target="_blank" class="view-button"> View Website </a>
 			</div>
