--- a/views/index.ejs
+++ b/views/index.ejs
@@ -154,7 +154,7 @@
 			<img src="https://drive.google.com/uc?export=view&id=1zyNQEfFu1Ya7y_Nh5_SCX32Uk8RuFNSE" alt="Refound"/>
 			<h2>Refound</h2>
 			<p class="serif" style="margin-bottom:2px;"> May 2022 </p>
-			<p class="serif" style="font-size:0.8em; margin-bottom:2px;">For Activate x Wormhole 2022, my team and I build an NFT platform for journalists that are struggling to get their content out there and struggling to be compensated. Won the Rebuild for Ukraine Bounty awarded by the NEAR protocol. I worked on the coinbase wallet and donations functionality.</p>
+			<p class="serif" style="font-size:0.8em; margin-bottom:2px;">For Activate x Wormhole 2022, my team and I build an NFT platform for journalists that are struggling to get their content out there and struggling to be compensated. Won the Rebuild for Ukraine Bounty awarded by the NEAR protocol. I worked on the coinbase wallet, donations functionality, and NFT contracts.</p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://www.refound.app" target="_blank" class="view-button"> View Website </a>
 			</div>
@@ -242,29 +242,17 @@
 
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1KzxObx4MwrtQ_iXZn2BG1tYrJnFCH2Hm" alt="Group Event Manager Mobile App"/>
-			<h2>Group Event Manager</h2>
-			<p class="serif"> October, 2020 </p>
-			<p class="serif"> A Mobile-App that allows users to create, edit, and rsvp to events. Built with the Ionic Framework.</p>
+			<img src="https://drive.google.com/uc?id=1zGuAKQCd1hMInSFJlgaPIqz_PqfUs41K" alt="Patatap Cltwo"/>
+			<h2>Shapes and Sounds - a Patatap cltwo</h2>
+			<p class="serif"> May, 2018 </p>
+			<p class="serif">I built a patatap.com cltwo using paper.js, howler.js, and sounds from a new song I've been working on.</p>
 			<div class="row">
-				<a href="https://github.com/genesisbarrios/GroupEventManager" target="_blank" class="view-button"> View Project </a>
+				<a href="https://github.com/genesisbarrios/shapesnsounds" target="_blank" class="view-button"> View Project</a>
 			</div>
 		</div>
 	</section>
 
 	<section class="projects d-flex two">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1ps5VAAgkwMktDpkeaaOCKNdbz2BeLQPQ" alt="Jumpy Blocks"/>
-			<h2>Jumpy Blocks</h2>
-			<p class="serif"> September, 2020 </p>
-			<p class="serif"> A Flappy Bird cltwo built with Javascript and Phaser. </p>
-			<div class="row">
-				<a href="https://github.com/genesisbarrios/jumpyblocks" target="_blank" class="view-button"> View Project </a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1kHyPPxqmGHWePdPgrhfEkBP2hxI0s90b"/>
 			<h2>YouTube Multiple Comment App</h2>
@@ -276,7 +264,7 @@
 		</div>
 	</section>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://drive.google.com/uc?id=1AQCVEyUjSCshzLvIyqwEMuYjEUTwa8MF"/>
 			<h2>VirtualRollCall</h2>
@@ -284,66 +272,6 @@
 			<p class="serif">For my Senior Project my teammate and I recreated the documentation and attendance application for the Pinecrest police department. Built with Angular, and Node.js.</p>
 			<div class="row">
 				<a href="https://github.com/genesisbarrios/VirtualRollCallSpring2020" target="_blank" class="view-button"> View Project</a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex one">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1QwBhqXjcjJEMfJhX7J4b_cKfjBgzi_o1"/>
-			<h2>Geek Text</h2>
-			<p class="serif"> December, 2019 </p>
-			<p class="serif">The final project for my Software Engineering class. We created a web application that allows users to create a profile, browse for books and authors and add them to their cart, and leave reviews on books. Built with Javascript, Express.js, Node.js, and MongoDB.</p>
-			<div class="row">
-				<a href="https://github.com/BarbosaO/CEN4010-Team-Project" target="_blank" class="view-button"> View Project</a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex two">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1Uirx5_Jkx9MH5sIOVllo7TiwKpuh0AXB"/>
-			<h2>Backroom Sessions iOS Application</h2>
-			<p class="serif"> December, 2019 </p>
-			<p class="serif">As the final project for my Mobile Application Development class, we created an iOS application for a local business. Built with Swift in XCode.</p>
-			<div class="row">
-				<a href="https://github.com/Isumy/BackroomSessions_Team_B" target="_blank" class="view-button"> View Project</a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex one">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1aIJAwt07xGLfUYaEVEatpuLGzzSkge-9" alt="Weather App"/>
-			<h2>Weather App</h2>
-			<p class="serif"> June, 2018 </p>
-			<p class="serif">I built a weather app with Node.js and the Open Weather Map API.</p>
-			<div class="row">
-				<a href="https://github.com/genesisbarrios/weatherApp" target="_blank" class="view-button"> View Project</a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex two">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1zGuAKQCd1hMInSFJlgaPIqz_PqfUs41K" alt="Patatap Cltwo"/>
-			<h2>Shapes and Sounds - a Patatap cltwo</h2>
-			<p class="serif"> May, 2018 </p>
-			<p class="serif">I built a patatap.com cltwo using paper.js, howler.js, and sounds from a new song I've been working on.</p>
-			<div class="row">
-				<a href="https://github.com/genesisbarrios/shapesnsounds" target="_blank" class="view-button"> View Project</a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex one">
-		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1FMw6bO6LfzOKDr4sn9nRnJM42RGPkMCQ" alt="Bulk Texting Application"/>
-			<h2>Automated Bulk Texting</h2>
-			<p class="serif"> February, 2018 </p>
-			<p class="serif"> As our MangoHacks submission my team and I created an application in Python that takes data from an excel spreadsheet and sends custom scheduled text messages to two or many clients at a time. I mostly worked on the front end of the application. </p>
-			<div class="row">
-				<a href="mailto:genesisbarriosdev@gmail.com" class="view-button"> Request Code</a>
 			</div>
 		</div>
 	</section>
