--- a/views/index.ejs
+++ b/views/index.ejs
@@ -239,15 +239,15 @@
 			</div>
 		</div>
 	</section>
-
+	
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1zGuAKQCd1hMInSFJlgaPIqz_PqfUs41K" alt="Patatap Cltwo"/>
-			<h2>Shapes and Sounds - a Patatap cltwo</h2>
-			<p class="serif"> May, 2018 </p>
-			<p class="serif">I built a patatap.com cltwo using paper.js, howler.js, and sounds from a new song I've been working on.</p>
+			<img src="https://drive.google.com/uc?id=1AQCVEyUjSCshzLvIyqwEMuYjEUTwa8MF"/>
+			<h2>VirtualRollCall</h2>
+			<p class="serif"> April, 2020 </p>
+			<p class="serif">For my Senior Project my teammate and I recreated the documentation and attendance application for the Pinecrest police department. Built with Angular, and Node.js.</p>
 			<div class="row">
-				<a href="https://github.com/genesisbarrios/shapesnsounds" target="_blank" class="view-button"> View Project</a>
+				<a href="https://github.com/genesisbarrios/VirtualRollCallSpring2020" target="_blank" class="view-button"> View Project</a>
 			</div>
 		</div>
 	</section>
@@ -264,14 +264,15 @@
 		</div>
 	</section>
 
+
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://drive.google.com/uc?id=1AQCVEyUjSCshzLvIyqwEMuYjEUTwa8MF"/>
-			<h2>VirtualRollCall</h2>
-			<p class="serif"> April, 2020 </p>
-			<p class="serif">For my Senior Project my teammate and I recreated the documentation and attendance application for the Pinecrest police department. Built with Angular, and Node.js.</p>
+			<img src="https://drive.google.com/uc?id=1zGuAKQCd1hMInSFJlgaPIqz_PqfUs41K" alt="Patatap Cltwo"/>
+			<h2>Shapes and Sounds - a Patatap clone</h2>
+			<p class="serif"> May, 2018 </p>
+			<p class="serif">I built a patatap.com cltwo using paper.js, howler.js, and sounds from a new song I've been working on.</p>
 			<div class="row">
-				<a href="https://github.com/genesisbarrios/VirtualRollCallSpring2020" target="_blank" class="view-button"> View Project</a>
+				<a href="https://github.com/genesisbarrios/shapesnsounds" target="_blank" class="view-button"> View Project</a>
 			</div>
 		</div>
 	</section>
